--- a/DementiaHelper/DementiaHelper/DementiaHelper/Pages/AccountInformationPage.xaml
+++ b/DementiaHelper/DementiaHelper/DementiaHelper/Pages/AccountInformationPage.xaml
@@ -114,7 +114,7 @@
                             <Label Style="{StaticResource ListLabelStyleTablet}" FontAttributes="Bold" Text="{i18n:Translate Picture}" Grid.Row="12" Grid.Column="1" Grid.ColumnSpan="4"></Label>
                             <!--This is used as a seperator line in the grid-->
                             <BoxView HeightRequest="1" BackgroundColor="Black" Grid.Row="13" Grid.Column="1" Grid.ColumnSpan="4"/>
-                            <Image Source="{Binding ShowedUser.Picture}" Grid.Row="14" Grid.Column="2" Grid.ColumnSpan="2"></Image>
+                            <!--<Image Source="{Binding ShowedUser.Picture}" Grid.Row="14" Grid.Column="2" Grid.ColumnSpan="2"></Image>-->
                         </Grid>
                     </ScrollView>
                     <StackLayout>
