alot of bug fixes for relative and caregiver views

--- a/DementiaHelper/DementiaHelper/DementiaHelper/Pages/AccountInformationPage.xaml
+++ b/DementiaHelper/DementiaHelper/DementiaHelper/Pages/AccountInformationPage.xaml
@@ -61,7 +61,7 @@
                         </Grid>
                     </ScrollView>
                     <StackLayout>
-                        <customRenders:CustomButtonRender Style="{StaticResource ButtonStyle}" IsEnabled="{Binding Editbutton}" Text="{i18n:Translate EditUserInformation}" Command="{Binding GoToEditCommand}"></customRenders:CustomButtonRender>
+                        <customRenders:CustomButtonRender Style="{StaticResource ButtonStyle}" Text="{i18n:Translate EditUserInformation}" Command="{Binding GoToEditCommand}"></customRenders:CustomButtonRender>
                     </StackLayout>
                 </StackLayout>
             </OnIdiom.Phone>
