--- a/DementiaHelper/DementiaHelper/DementiaHelper/Pages/CreateShoppingItemPage.xaml
+++ b/DementiaHelper/DementiaHelper/DementiaHelper/Pages/CreateShoppingItemPage.xaml
@@ -55,7 +55,7 @@
                     <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
                 <customRenders:CustomButtonRender Text="{i18n:Translate Cancel}" Style="{StaticResource CancelButtonStyle}" Command="{Binding CancelCommand}" Grid.Column="0" />
-                <customRenders:CustomButtonRender Text="Tilføj vare" Style="{StaticResource ButtonStyle}" Command="{Binding SaveCommand}" Grid.Column="1" />
+                <customRenders:CustomButtonRender Text="{i18n:Translate AddShoppingItem}" Style="{StaticResource ButtonStyle}" Command="{Binding SaveCommand}" Grid.Column="1" />
             </Grid>
         </Grid>
     </ContentPage.Content>
